test_cases/negative/compiler/double_return.snek
def Foo(value) {
    return value > Exec("hello");
    return value > Exec("hello");
}

export DEFAULT = Foo(Image("quay.io/toolbx-images/alpine-toolbox"));
